<resources>
    <string name="app_name">StoriesApp</string>
    <string name="app_nameDetail">Story Detail</string>
    <string name="app_nameAddStory">Add Story</string>
    <string name="login">Login</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="txt_reg">Don\'t Have Account?</string>
    <string name="register">Register</string>
    <string name="email_hint">Input Your Email</string>
    <string name="invalid_email">Invalid Email Format!</string>
    <string name="password_hint">Input Your Password</string>
    <string name="invalid_password">Use at least %1$d characters!</string>
    <string name="name">Name</string>
    <string name="txt_login">Already Have Account?</string>
    <string name="name_hint">Input Your Name</string>
    <string name="input_message">Input Your %1$s</string>
    <string name="login_error">Login Error, Please Try Again!</string>
    <string name="reg_title">Congratulations!</string>
    <string name="reg_message">Your Account Successfully Created</string>
    <string name="reg_action">Next</string>
    <string name="register_error">Register Error, Please Try Again!</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="add_story">Add Story</string>
    <string name="detail_imgDesc">Detail Story Image</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="desc_hint">Input Your Description</string>
    <string name="preview_imgDesc">Preview Image</string>
    <string name="no_permission">Can\'t Get Permission</string>
    <string name="choose_image">Choose a Picture</string>
    <string name="no_image">Please Input Your Image First!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Coba lagi</string>
    <string name="share_location">Share Location</string>
    <string name="no_location">Location not found. Please Try Again!</string>
    <string name="maps">Maps</string>
</resources>