<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:orientation="vertical"
    card:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            card:layout_constraintEnd_toEndOf="parent"
            card:layout_constraintStart_toStartOf="parent"
            card:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/tvDesc.head"
            android:layout_marginTop="8dp"
            android:maxLines="3"
            tools:text="@string/name"
            card:layout_constraintEnd_toEndOf="@+id/iv_item_photo"
            card:layout_constraintStart_toStartOf="@+id/iv_item_photo"
            card:layout_constraintTop_toBottomOf="@+id/iv_item_photo" />

        <TextView
            android:id="@+id/tv_rvCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="@string/created_at"
            card:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            card:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card:layout_constraintTop_toBottomOf="@+id/tv_item_name" />

        <TextView
            android:id="@+id/tv_rvDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="3"
            tools:text="@string/description"
            card:layout_constraintEnd_toEndOf="@+id/tv_rvCreate"
            card:layout_constraintStart_toStartOf="@+id/tv_rvCreate"
            card:layout_constraintTop_toBottomOf="@+id/tv_rvCreate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>